@@ -31,6 +31,7 @@ Version 1.0.xxx (June xxth 2013)
 - Implemented: X10 Security Remote Arm Home/Arm Away prompt
 - Fixed: Possible read error for YouLess devices (extra space in front of total power)
 - Fixed: Camera Snapshot emailing
+- Implemented: Scenes can now be re-ordered (dashboard/scenes tab)
 
 Version 1.0.666 (May 28th 2013)
 - Implemented: Settings, Doorbell could be send as 'Group On' or 'On' command
